lessons/046/k8s/8-https-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: https-express
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: express.khulnasoft.com
    http:
      paths:
      - path: /
        backend:
          serviceName: express
          servicePort: 8080
  tls:
  - hosts:
    - express.khulnasoft.com
    secretName: express-khulnasoft-com-tls
